--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,10 @@
   		<version>4.12</version>
   		<scope>test</scope>
   	</dependency>
-<!--   	<dependency>
+   	<dependency>
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-lang3</artifactId>
     	<version>3.8.1</version>
-	</dependency> -->
+	</dependency>
   </dependencies>
 </project>
